Added keycloak authentication
